--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,12 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [179] Haoyu Zhao, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
+          <b>Faster rates for compressed federated learning with client-variance reduction</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2112.13097">arXiv</a>] [code: COFIG, FRECON] <br>
+          <br>
+
           [178] Konstantin Burlachenko, Samuel Horváth and Peter Richtárik<br>
           <b>FL_PyTorch: optimization research simulator for federated learning</b><br>
           <a href="https://dl.acm.org/doi/pdf/10.1145/3488659.3493775">Proceedings of the 2nd ACM International Workshop on Distributed Machine Learning</a> <br>
@@ -67,6 +73,7 @@
 
           [176] Xun Qian, Rustem Islamov, Mher Safaryan and Peter Richtárik<br>
           <b>Basis matters: better communication-efficient second order methods for federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2111.01847">arXiv</a>] [code: BL1, BL2, BL3] <br>
           <br>
 
@@ -510,7 +517,7 @@
 
           [108] Eduard Gorbunov, Adel Bibi, Ozan Sezer, El Houcine Bergou and Peter Richtárik<br>
           <b>A stochastic derivative free optimization method with momentum</b><br>
-          <a href="https://openreview.net/forum?id=HylAoJSKvH">8th International Conference on Learning Representations</a>(ICLR 2020)<br>
+          <a href="https://openreview.net/forum?id=HylAoJSKvH">8th International Conference on Learning Representations</a> (ICLR 2020)<br>
           [<a href="https://arxiv.org/abs/1905.13278">arXiv</a>] [<a
             href="posters/Poster-SMTP.pdf">poster</a>] [code: SMTP]<br>
           <br>
