--- a/i_talks.html
+++ b/i_talks.html
@@ -70,6 +70,10 @@ Apple's Workshop on Privacy Preserving Machine Learning, April 5-6, 2022 (invite
 </p>
 
 <p>
+Computer Science Graduate Seminar, KAUST, March 21, 2022 (invited)
+</p>
+
+<p>
 Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
