--- a/i_talks.html
+++ b/i_talks.html
@@ -77,6 +77,10 @@ Computer Science Graduate Seminar, KAUST, March 21, 2022 (invited)
 Dagstuhl Seminar, <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=22081">Theory of Randomized Optimization Heuristics</a>, Germany, February 20-25, 2022
 </p>
 
+<p>
+<a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>, Virtual Seminar Series, February 7, 2022 (invited)
+</p>
+
 
 
 
