--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,13 @@
           <br>
           <meta charset="utf-8">
 
+          <h1> Prepared in 2022 </h1>
+
+          [180] Dmitry Kovalev, Alexander Gasnikov and Peter Richtárik<br>
+          <b>Accelerated primal-dual gradient method for smooth and convex-concave saddle-point problems with bilinear coupling</b><br>
+          [<a href="https://arxiv.org/abs/2112.15199">arXiv</a>] [code: APDG] <br>
+          <br>
+
           <h1> Prepared in 2021 </h1>
 
           [179] Haoyu Zhao, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
