--- a/i_papers.html
+++ b/i_papers.html
@@ -50,7 +50,7 @@
           <br>
           <meta charset="utf-8">
 
-  
+
           <h1> Prepared in 2021 </h1>
 
           [180] Dmitry Kovalev, Alexander Gasnikov and Peter Richtárik<br>
@@ -437,6 +437,7 @@
           [121] Samuel Horváth, Lihua Lei, Peter Richtárik and Michael I. Jordan<br>
           <b>Adaptivity of stochastic gradient methods for nonconvex optimization</b><br>
           <a href="https://opt-ml.org/papers/2020/paper_50.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
+          To appear in SIAM Journal on Mathematics of Data Science (SIMODS), 2022 <br>
           [<a href="https://arxiv.org/abs/2002.05359">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_50.pdf">poster</a>] <br>
           <br>
 
