--- a/index.html
+++ b/index.html
@@ -46,6 +46,81 @@
 
 
 
+<h3>January 11, 2022</h3>
+
+<h1>Paper Accepted to SIAM Journal on Mathematics of Data Science</h1>
+<br>
+
+The paper <a href="https://arxiv.org/abs/2002.05359">"Adaptivity of stochastic
+  gradient methods for nonconvex optimization"</a>, joint work with
+  <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and
+<a href="https://lihualei71.github.io">Lihua Lei</a>, and
+<a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>
+was accepted to
+<a href="https://www.frontiersin.org/journals/signal-processing">SIAM Journal on Mathematics
+  of Data Science (SIMODS).
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>December 31, 2021</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out: </span>
+<a href="https://arxiv.org/abs/2112.15199">
+  "Accelerated primal-dual gradient method for smooth and convex-concave saddle-point problems with bilinear coupling"</a> -
+joint work with
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> and
+<a href="https://zhizeli.github.io">Alexander Gasnikov</a>.
+<br>
+<br>
+Abstract: <i>
+  In this paper we study a convex-concave saddle-point problem min_x max_y f(x) + y^T A x − g(y), where f(x) and g(y) are smooth and convex functions.
+  We propose an Accelerated Primal-Dual Gradient Method for solving this problem which (i) achieves an optimal
+  linear convergence rate in the strongly-convex-strongly-concave regime matching the lower complexity bound
+  (Zhang et al., 2021) and (ii) achieves an accelerated linear convergence rate in the case when only one of
+  the functions f(x) and g(y) is strongly convex or even none of them are. Finally, we obtain a
+  linearly-convergent algorithm for the general smooth and convex-concave saddle point problem min_x max_y F(x,y)
+  without requirement of strong convexity or strong concavity.
+</i>
+<br>
+<br>
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>December 24, 2021</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out: </span>
+<a href="https://arxiv.org/abs/2112.13097">
+  "Faster rates for compressed federated learning with client-variance reduction"</a> -
+joint work with
+<a href="http://hyzhao.me">Haoyu Zhao</a>,
+<a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> and
+<a href="https://zhizeli.github.io">Zhize Li</a>.
+<br>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>December 7, 2021</h3>
