--- a/i_papers.html
+++ b/i_papers.html
@@ -171,7 +171,7 @@
           [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>] [<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36">3 min video</a>] [code: RR-SVRG, SO-SVRG, Cyclic-SVRG]<br>
           <br>
 
-          [160] Zhize Li and Peter Richtárik<br>
+          [160] Zhize Li, Slavomír Hanzely and Peter Richtárik<br>
           <b>ZeroSARAH: Efficient nonconvex finite-sum optimization with zero full gradient computation </b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2103.01447">arXiv</a>] [code: Zero-SARAH]<br>
@@ -600,7 +600,7 @@
 
           [97] Nicolas Loizou and Peter Richtárik<br>
           <b>Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</b><br>
-          To appear in: IEEE Transactions on Information Theory<br>
+          <a href="https://ieeexplore.ieee.org/document/9539193">IEEE Transactions on Information Theory 67:12, 2021 </a><br>
           [<a href="https://arxiv.org/abs/1905.08645">arXiv</a>]<br>
           <br>
 
