--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [181] Grigory Malinovsky, Konstantin Mishchenko and Peter Richtárik<br>
+          <b>Server-side stepsizes and sampling without replacement provably help in federated optimization</b><br>
+          [<a href="https://arxiv.org/abs/2201.11066">arXiv</a>] [code: Nastya] <br>
+          <br>
+
           [180] Dmitry Kovalev, Alexander Gasnikov and Peter Richtárik<br>
           <b>Accelerated primal-dual gradient method for smooth and convex-concave saddle-point problems with bilinear coupling</b><br>
           [<a href="https://arxiv.org/abs/2112.15199">arXiv</a>] [code: APDG] <br>
@@ -73,12 +78,14 @@
 
           [177] Elnur Gasanov, Ahmed Khaled, Samuel Horváth and Peter Richtárik<br>
           <b>FLIX: A simple and communication-efficient alternative to local methods in federated learning</b><br>
+          24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2111.11556">arXiv</a>] [code: FLIX] <br>
           <br>
 
           [176] Xun Qian, Rustem Islamov, Mher Safaryan and Peter Richtárik<br>
           <b>Basis matters: better communication-efficient second order methods for federated learning</b><br>
+          24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2111.01847">arXiv</a>] [code: BL1, BL2, BL3] <br>
           <br>
@@ -90,6 +97,7 @@
 
           [174] Rafał Szlendak, Alexander Tyurin and Peter Richtárik<br>
           <b>Permutation compressors for provably faster distributed nonconvex optimization</b><br>
+          10th International Conference on Learning Representations (ICLR 2022)  <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2110.03300">arXiv</a>] [code: MARINA] <br>
           <br>
@@ -108,6 +116,7 @@
 
           [171] Majid Jahani, Sergey Rusakov, Zheng Shi, Peter Richtárik, Michael W. Mahoney and Martin Takáč<br>
           <b>Doubly adaptive scaled algorithm for machine learning using second-order information</b><br>
+          10th International Conference on Learning Representations (ICLR 2022)  <br>
           [<a href="https://arxiv.org/abs/2109.05198">arXiv</a>] [code: OASIS] <br>
           <br>
 
@@ -179,6 +188,7 @@
 
           [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
           <b>An optimal algorithm for strongly convex minimization under affine constraints</b><br>
+          24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) <br>
           [<a href="https://arxiv.org/abs/2102.11079">arXiv</a>]  <br>
           <br>
 
@@ -196,6 +206,7 @@
 
           [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
           <b>IntSGD: Floatless compression of stochastic gradients</b><br>
+          10th International Conference on Learning Representations (ICLR 2022)  <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>] [<a href="https://www.youtube.com/watch?v=-YjXDdwkeqc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=39">5 min video</a>] [code: IntSGD, IntDIANA] <br>
           <br>
@@ -299,7 +310,7 @@
 
           [142] Laurent Condat, Grigory Malinovsky, and Peter Richtárik<br>
           <b>Distributed proximal splitting algorithms with rates and acceleration</b><br>
-          To appear in: Frontiers in Signal Processing, section Signal Processing for Communications, 2021<br>
+          <a href="https://www.frontiersin.org/articles/10.3389/frsip.2021.776825/full?&utm_source=Email_to_authors_&utm_medium=Email&utm_content=T1_11.5e1_author&utm_campaign=Email_publication&field=&journalName=Frontiers_in_Signal_Processing&id=776825">Frontiers in Signal Processing, section Signal Processing for Communications, 2022</a><br>
           <a href="https://opt-ml.org/papers/2020/paper_31.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           <span class="important">Spotlight Talk</span><br>
           [<a href="https://arxiv.org/abs/2010.00952">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_31.png">poster</a>]   <br>
