--- a/i_talks.html
+++ b/i_talks.html
@@ -58,13 +58,16 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 1-
 </p>
 
 <p>
-  <a href="https://iccopt2022.lehigh.edu">International Conference on Continuous Optimization (ICCOPT)</a>, Lehigh, USA, July 25-28, 2022 (invited) 
+  <a href="https://iccopt2022.lehigh.edu">International Conference on Continuous Optimization (ICCOPT)</a>, Lehigh, USA, July 25-28, 2022 (invited)
 </p>
 
 <p>
 PhD Course (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria (invited)
 </p>
 
+<p>
+Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
+</p>
 
 <p>
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
