--- a/index.html
+++ b/index.html
@@ -44,6 +44,159 @@
         <div id="content">
 
 
+<h3>January 28, 2022</h3>
+
+<h1>ICML 2022</h1>
+<br>
+
+The ICML 2022 submission deadline is over, I'll be sleeping for the rest of the month.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>January 26, 2022</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2201.11066">
+"Server-side stepsizes and sampling without replacement provably help in federated optimization"</a> -
+joint work with
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> and
+<a href="https://konstmish.github.io">Konstantin Mishchenko</a>.
+<br>
+<br>
+Abstract:
+<i>
+We present a theoretical study of server-side optimization in federated learning. Our results are the first to show that the widely popular heuristic of scaling the client updates with an extra parameter is very useful in the context of Federated Averaging (FedAvg) with local passes over the client data. Each local pass is performed without replacement using Random Reshuffling, which is a key reason we can show improved complexities. In particular, we prove that whenever the local stepsizes are small, and the update direction is given by FedAvg in conjunction with Random Reshuffling over all clients, one can take a big leap in the obtained direction and improve rates for convex, strongly convex, and non-convex objectives. In particular, in non-convex regime we get an enhancement of the rate of convergence from $O(\epsilon^{-3})$ to $O(\epsilon^{-2})$. This result is new even for Random Reshuffling performed on a single node. In contrast, if the local stepsizes are large, we prove that the noise of client sampling can be controlled by using a small server-side stepsize. To the best of our knowledge, this is the first time that local steps provably help to overcome the communication bottleneck. Together, our results on the advantage of large and small server-side stepsizes give a formal justification for the practice of adaptive server-side optimization in federated learning. Moreover, we consider a variant of our algorithm that supports partial client participation, which makes the method more practical.
+</i>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>January 23, 2022</h3>
+
+<h1>The Spring 2022 semester at KAUST started</h1>
+<br>
+
+The Spring 2022 semester at KAUST started today; I am teaching CS 332: Federated Learning.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>January 20, 2022</h3>
+
+<h1>Three Papers Accepted to ICLR 2022</h1>
+<br>
+
+We've had several three papers accepted to the <a href="https://iclr.cc/">International Conference on Learning Representations 2022.</a>
+Here they are:<br><br>
+
+
+<b> 1) "IntSGD: Floatless Compression of Stochastic Gradient"</b> <a href="https://arxiv.org/abs/2102.08374">[arXiv]</a>  -
+joint work with
+<a href="https://konstmish.github.io">Konstantin Mishchenko</a>,
+<a href="https://dblp.org/pid/207/1922.html">Bokun Wang</a>, and
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>.
+
+<br>
+<br>
+<br>
+
+<b> 2) "Doubly Adaptive Scaled Algorithm for Machine Learning Using Second-Order Information"</b>
+<a href="https://arxiv.org/abs/2109.05198">[arXiv]</a>  -
+joint work with
+<a href="https://coral.ise.lehigh.edu/maj316/">Majid Jahani</a>,
+<a href="https://scholar.google.ru/citations?user=tdyw7IAAAAAJ&hl=en">Sergey Rusakov</a>,
+<a href="https://coral.ise.lehigh.edu/zhs310/">Zheng Shi</a>,
+<a href="https://www.stat.berkeley.edu/~mmahoney/">Michael W. Mahoney</a>, and
+<a href="https://mtakac.com/">Martin Takáč</a>.
+
+<br>
+<br>
+<br>
+
+<b> 3) "Permutation Compressors for Provably Faster Distributed Nonconvex Optimization"</b>
+<a href="https://arxiv.org/abs/2110.03300">[arXiv]</a>  -
+joint work with
+<a href="https://uk.linkedin.com/in/rafa%C5%82-szlendak-552936220">Rafal Szlendak</a> and
+<a href="https://k3nfalt.github.io/">Alexander Tyurin.</a>
+
+<br>
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>January 18, 2022</h3>
+<h1>Three Papers Accepted to AISTATS 2022</h1>
+<br>
+
+We've had several three papers accepted to <a href="http://aistats.org/aistats2022/">The 25th International Conference on Artificial Intelligence and Statistics.</a>
+
+Here they are:<br><br>
+
+
+<b> 1) "An Optimal Algorithm for Strongly Convex Minimization under Affine Constraints"</b> <a href="https://arxiv.org/abs/2102.11079">[arXiv]</a>  -
+joint work with
+<a href="https://adil-salim.github.io/">Adil Salim</a>,
+<a href="https://lcondat.github.io/">Laurent Condat</a>, and
+<a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>.
+
+<br>
+<br>
+<br>
+
+<b> 2) "FLIX: A Simple and Communication-Efficient Alternative to Local Methods in Federated Learning"</b>
+<a href="https://arxiv.org/abs/2111.11556">[arXiv]</a>  -
+joint work with
+<a href="http://elnurgasanov.com/">Elnur Gasanov</a>,
+<a href="https://rka97.github.io/">Ahmed Khaled</a>, and
+<a href="https://samuelhorvath.github.io/">Samuel Horváth</a>.
+
+<br>
+<br>
+<br>
+
+<b> 3) "Basis Matters: Better Communication-Efficient Second Order Methods for Federated Learning"</b>
+<a href="https://arxiv.org/abs/2111.01847">[arXiv]</a>  -
+joint work with
+<a href="https://qianxunk.github.io/">Xun Qian</a>,
+<a href="https://rustem-islamov.github.io/">Rustem Islamov</a>, and
+<a href="https://mher-safaryan.github.io/">Mher Safaryan</a>.
+
+<br>
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 <h3>January 11, 2022</h3>
