--- a/i_papers.html
+++ b/i_papers.html
@@ -51,12 +51,22 @@
           <meta charset="utf-8">
 
 
-          <h1> Prepared in 2021 </h1>
+          <h1> Prepared in 2022 </h1>
+
+
+          [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi <br>
+          <b>BEER: Fast $O(1/T)$ rate for decentralized nonconvex optimization with communication compression</b><br>
+          [<a href="https://arxiv.org/abs/2201.13320">arXiv</a>] [code: BEER] <br>
+          <br>
 
           [181] Grigory Malinovsky, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Server-side stepsizes and sampling without replacement provably help in federated optimization</b><br>
           [<a href="https://arxiv.org/abs/2201.11066">arXiv</a>] [code: Nastya] <br>
           <br>
+
+
+          <h1> Prepared in 2021 </h1>
+
 
           [180] Dmitry Kovalev, Alexander Gasnikov and Peter Richtárik<br>
           <b>Accelerated primal-dual gradient method for smooth and convex-concave saddle-point problems with bilinear coupling</b><br>
