--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
         <div id="content">
 
 
+<h3>February 1, 2022</h3>
+
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2201.11066">
+"BEER: Fast $O(1/T)$ rate for decentralized nonconvex optimization with communication compression"</a> -
+joint work with
+<a href="https://hyzhao.me">Haoyu Zhao</a>,
+<a href="https://scholar.google.com/citations?user=MbBwWzMAAAAJ&hl=en">Boyue Li</a>,
+<a href="https://zhizeli.github.io">Zhize Li</a>, and
+<a href="https://users.ece.cmu.edu/~yuejiec/">Yuejie Chi</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+Communication efficiency has been widely recognized as the bottleneck for large-scale decentralized machine learning applications in multi-agent or federated environments. To tackle the communication bottleneck, there have been many efforts to design communication-compressed algorithms for decentralized nonconvex optimization, where the clients are only allowed to communicate a small amount of quantized information (aka bits) with their neighbors over a predefined graph topology. Despite significant efforts, the state-of-the-art algorithm in the nonconvex setting still suffers from a slower rate of convergence $O((G/T)^{2/3})$ compared with their uncompressed counterpart, where $G$ measures the data heterogeneity across different clients, and $T$ is the number of communication rounds. This paper proposes BEER, which adopts communication compression with gradient tracking, and shows it converges at a faster rate of $O(1/T)$. This significantly improves over the state-of-the-art rate, by matching the rate without compression even under arbitrary data heterogeneity. Numerical experiments are also provided to corroborate our theory and confirm the practical superiority of BEER in the data heterogeneous regime.
+</i>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>January 28, 2022</h3>
 
 <h1>ICML 2022</h1>
@@ -88,7 +118,7 @@ We present a theoretical study of server-side optimization in federated learning
 
 <h3>January 23, 2022</h3>
 
-<h1>The Spring 2022 semester at KAUST started</h1>
+<h1>The Spring 2022 Semester at KAUST Started</h1>
 <br>
 
 The Spring 2022 semester at KAUST started today; I am teaching CS 332: Federated Learning.
@@ -111,7 +141,7 @@ We've had several three papers accepted to the <a href="https://iclr.cc/">Intern
 Here they are:<br><br>
 
 
-<b> 1) "IntSGD: Floatless Compression of Stochastic Gradient"</b> <a href="https://arxiv.org/abs/2102.08374">[arXiv]</a>  -
+<b> 1) "IntSGD: Floatless Compression of Stochastic Gradients"</b> <a href="https://arxiv.org/abs/2102.08374">[arXiv]</a>  -
 joint work with
 <a href="https://konstmish.github.io">Konstantin Mishchenko</a>,
 <a href="https://dblp.org/pid/207/1922.html">Bokun Wang</a>, and
