--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,10 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li, and Eduard Gorbunov <br>
+          <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
+          [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
+          <br>
 
           [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi <br>
           <b>BEER: Fast $O(1/T)$ rate for decentralized nonconvex optimization with communication compression</b><br>
