--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,11 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [184] Alexander Tyurin and Peter Richtárik<br>
+          <b>Distributed nonconvex optimization with communication compression, optimal oracle complexity, and no client synchronization</b><br>
+          [<a href="https://arxiv.org/abs/2202.01268">arXiv</a>] [code: DASHA, DASHA-PAGE, DASHA-MVR] <br>
+          <br>
+
           [183] Peter Richtárik, Igor Sokolov, Ilyas Fatkhullin, Elnur Gasanov, Zhize Li, and Eduard Gorbunov <br>
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
           [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [code: 3PC, LAG, CLAG, EF21] <br>
