--- a/i_teaching.html
+++ b/i_teaching.html
@@ -32,7 +32,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -49,6 +49,10 @@
 <h1>KAUST</h1>
 
 <ul>
+
+  <li> CS 332, Federated Learning (<a href="https://piazza.com/kaust.edu.sa/spring2022/cs332">Spring 2022 - Piazza</a>)</li>
+
+  <li> CS 331, Stochastic Gradient Descent Methods (<a href="https://piazza.com/kaust.edu.sa/fall2021/cs331">Fall 2021 - Piazza</a>)</li>
 
   <li> CS 332, Federated Learning (<a href="https://piazza.com/kaust.edu.sa/spring2021/cs332">Spring 2021 - Piazza</a>)</li>
 
