--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+<h3>February 7, 2022</h3>
+
+<h1>Talk at the Machine Learning NeEDS Mathematical Optimization Seminar</h1>
+<br>
+
+Today I am giving a talk within the <a href="https://congreso.us.es/mlneedsmo/">Machine Learning NeEDS Mathematical Optimization</a>
+virtual seminar series. This is the opening talk of the third season of the seminar. I spoke about
+<a href="https://arxiv.org/abs/2110.03300">"Permutation compressors for provably faster distributed nonconvex optimization"</a> -
+paper recently accepted to ICLR 2022.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
           <h3>February 2, 2022</h3>
 
           <h1>New Paper</h1>
