--- a/i_events.html
+++ b/i_events.html
@@ -52,8 +52,29 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+  <li><a href="https://nips.cc/Conferences/FutureMeetings"><b>NeurIPS 2022</b></a>, New Orleans, USA, November 26 - December 4, 2022
 
+  <ul>
+    <li> Area Chair </li>
+  </ul>
 
+  </li>
+
+  <li><a href="https://icml.cc/"><b>ICML 2022</b></a>, Physical Coference, July 17-23, 2022
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
+
+  <li><a href="https://iclr.cc/"><b>ICLR 2022</b></a>, Virtual Meeting, April 25-29, 2022
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
 
 
 </ol>
