--- a/i_team.html
+++ b/i_team.html
@@ -238,6 +238,15 @@
 
           <h2> Research Interns</h2>
 
+          <h3>Future:</h3>
+
+          <ul>
+            <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (University of Oxford), 7/2022-10/2022</li>
+            <li><a href="">Kaja Gruntkowska</a> (University of Warwick), 7/2022-9/2022</li>
+            <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (Yerevan State University), 6/2022-11/2022</li>
+          </ul>
+
+
           <h3>Current:</h3>
 
           <ul>
@@ -249,7 +258,7 @@
           <h3>Alumni:</h3>
 
           <ul>
-            <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (Warwick), 7/2021-10/2021 </li>
+            <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220">Rafał Szlendak</a> (University of Warwick), 7/2021-10/2021 </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=27280">Muhammad Harun Ali Khan</a> (Imperial College), 7/2021-11/2021 </li>
             <li><a href="https://scholar.google.com/citations?hl=en&user=H9GqvAYAAAAJ&view_op=list_works&sortby=pubdate">Bokun Wang</a> (University of California, Davis), 5/2020-8/2021</li>
             <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-8/2021 </li>
